# Nebula

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  clippy.toml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  nginx.conf  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apisix/: apisix.yaml  config.yaml
docker/: Dockerfile.crates  Dockerfile.nebula  nginx.conf
docker/apisix/: apisix.yaml
docker/mpmcp/: Dockerfile  entrypoint.sh
scripts/: build.sh  deploy.sh
src/crates/cli/: Cargo.toml
src/crates/cli/src/: lib.rs  main.rs
src/crates/core/: Cargo.toml
src/crates/core/src/: lib.rs
src/crates/core/src/template/: engine.rs  template.rs
src/crates/ffi/: Cargo.toml
src/crates/ffi/src/: lib.rs  main.rs
src/nebula/: index.html  package.json  pnpm-lock.yaml
src/nebula/src/: App.tsx  theme.ts
src/nebula/src/api/: client.ts  projects.ts  templates.ts  types.ts
src/nebula/src/components/: ProjectCreateForm.tsx  ScaffoldResult.tsx  TemplateSelector.tsx
src/nebula/src/pages/: LauncherHub.tsx  NewProjectPage.tsx  SplashScreen.tsx
src/nebula/src/styles/: App.css  index.css
src/python/lummcp/: pyproject.toml
src/python/mpmcp/: Dockerfile  entrypoint.sh  environment.yml  pyproject.toml
src/python/mpmcp/example/ridge_waveguide/: README.md  ridge_waveguide.py
src/python/mpmcp/src/mpmcp/: main.py
templates/pic-design/: template.toml
templates/pic-design/{{project-name}}/: project.pic.toml  project.toml
