[package]
name = "nebula-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nebula-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
nebula-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
